--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.4",
         "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-react": "^0.8.1"
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@material-tailwind/react": "^2.1.9",
+        "flowbite": "^2.3.0",
+        "flowbite-react": "^0.10.1",
+        "react-router-dom": "^6.23.1"
     }
 }
